<resources>
    <string name="app_name">Hiking trails</string>

    <string name="title">Hiking trails</string>
    <string name="menu_home">Home</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_intermediate">Intermediate</string>
    <string name="menu_beginner">Beginner</string>
    <string name="menu_timer">Timer</string>
    <string name="swipe_bar">Swipe to next trail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pace_slow">slow</string>
    <string name="pace_average">average</string>
    <string name="pace_fast">fast</string>
    <string name="stages">Stages</string>
    <string name="times">Times</string>

    <string name="dark_mode">Dark mode</string>

    <string name="select_trail">Select a trail</string>
    <string name="init_time">00:00:00</string>
</resources>