<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_advanced"
            android:icon="@drawable/ic_menu_advanced"
            android:title="@string/menu_advanced" />
        <item
            android:id="@+id/nav_intermediate"
            android:icon="@drawable/ic_menu_intermediate"
            android:title="@string/menu_intermediate" />
        <item
            android:id="@+id/nav_beginner"
            android:icon="@drawable/ic_menu_beginner"
            android:title="@string/menu_beginner" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/menu_timer" />
    </group>
</menu>