<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailItem">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MyApplication.AppBarOverlay">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.MyApplication.PopupOverlay"/>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/trailImg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/pinetree"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"/>

        <TextView
            style="@style/trailName"
            android:id="@+id/trailName"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:lines="2"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:justificationMode="inter_word"
            android:textSize="16sp" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/paceButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:text="@string/pace_slow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/stagesHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stages"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/dropdownIconStages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:layout_gravity="end"/>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/timesHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/times"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/dropdownIconTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:layout_gravity="end"/>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/times"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="16sp" />
    </LinearLayout>


</RelativeLayout>